tests/parser/fail/unterminated-string.som
"test:
fail-message:
  regex: string .+ not terminated
"

UnterminatedString = (
  init = ('i am not terminated!)
)
